--- a/app/assets/stylesheets/modules/_data_sources.scss
+++ b/app/assets/stylesheets/modules/_data_sources.scss
@@ -3,7 +3,7 @@
   text-decoration: none;
   background-color: $gray-065;
   color: white;
-  min-width: 4.2em;
+  min-width: 3.75rem;
   text-align: center;
   align-self: stretch;
   align-items: center;
